<table> bordercolor attribute should not create a visible border https://bugs.webkit.org/show_bug.cgi?id=256850 rdar://109436009

Reviewed by Tim Nguyen.

A single bordercolor attribute on a table should not affect the
visibility of the border, which is none by default. This is aligned
with Firefox and what the HTML spec is prescribing.
> treat the [bordercolor] attribute as a presentational hint setting
> the element's 'border-top-color', 'border-right-color',
> 'border-bottom-color', and 'border-left-color' properties to the
> resulting color."
> — https://html.spec.whatwg.org/multipage/rendering.html#tables-2

It imports also one knew WPT test
WPT: 3d9cd84

There is a followup bug for tests failing
https://bugs.webkit.org/show_bug.cgi?id=257254
This is the next step.

* LayoutTests/fast/table/border-changes-expected.txt:
* LayoutTests/fast/table/border-changes.html:
* LayoutTests/imported/w3c/resources/import-expectations.json:
* LayoutTests/imported/w3c/resources/resource-files.json:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/tables/colgroup_valign_bottom-expected.xhtml: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/tables/colgroup_valign_top-expected.xhtml: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/tables/table-bordercolor-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/tables/table-bordercolor-001-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/tables/table-bordercolor-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/non-replaced-elements/tables/w3c-import.log:
* LayoutTests/platform/glib/tables/mozilla/bugs/bug1163-1-expected.txt:
* LayoutTests/platform/glib/tables/mozilla/bugs/bug131020_iframe-expected.txt:
* LayoutTests/platform/glib/tables/mozilla/bugs/bug131020-expected.txt:
* LayoutTests/platform/gtk/tables/mozilla/bugs/bug1163-1-expected.png: Removed.
* LayoutTests/platform/ios-wk2/tables/mozilla/bugs/bug1163-1-expected.txt: Added.
* LayoutTests/platform/ios-wk2/tables/mozilla/bugs/bug131020_iframe-expected.txt: Added.
* LayoutTests/platform/ios-wk2/tables/mozilla/bugs/bug131020-expected.txt: Added.
* LayoutTests/platform/mac/tables/mozilla/bugs/bug1163-1-expected.png: Removed.
* LayoutTests/platform/mac/tables/mozilla/bugs/bug131020_iframe-expected.txt: Removed.
* LayoutTests/platform/mac/tables/mozilla/bugs/bug131020-expected.txt: Removed.
* LayoutTests/platform/wincairo/tables/mozilla/bugs/bug1163-1-expected.txt: Removed.
* LayoutTests/platform/wincairo/tables/mozilla/bugs/bug131020_iframe-expected.txt: Removed.
* LayoutTests/platform/wincairo/tables/mozilla/bugs/bug131020-expected.txt: Removed.
* LayoutTests/platform/wpe/tables/mozilla/bugs/bug1163-1-expected.txt: Removed.
* LayoutTests/platform/wpe/tables/mozilla/bugs/bug131020_iframe-expected.txt: Removed.
* LayoutTests/platform/wpe/tables/mozilla/bugs/bug131020-expected.txt: Removed.
* LayoutTests/tables/mozilla/bugs/bug1163-1-expected.txt:
* LayoutTests/tables/mozilla/bugs/bug131020_iframe-expected.txt:
* LayoutTests/tables/mozilla/bugs/bug131020-expected.txt:
* LayoutTests/TestExpectations:
* Source/WebCore/html/HTMLTableElement.cpp:
(WebCore::HTMLTableElement::additionalPresentationalHintStyle):
(WebCore::HTMLTableElement::attributeChanged):
(WebCore::HTMLTableElement::cellBorders const):
* Source/WebCore/html/HTMLTableElement.h:

Canonical link: https://commits.webkit.org/265670@main